phm report sinhala and english words

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -616,6 +616,244 @@
     "pregm.if_died": "New Born Child Death",
     "pregm.does_mother_comes_to_post_delivery_clinics": "Does Mother Come To Post Delivery Clinics?",
     "pregm.accepted_family_organization_method": "Does Accepted A Family Planning Method?",
-    "pregm.if_no":"If No Why?"
+    "pregm.if_no":"If No Why?",
+
+    "phm.age": "Age",
+    "phm.Mothers_with_1st_Pregnancy": "Mothers with 1st Pregnancy",
+    "phm.numberOfRegistered": "Number of Registered Mothers",
+    "phm.numberOfBeforePregnancyTest": "Before Pregnancy Test",
+    "phm.numberOfCouplesComeTo2Visit": "Number of Couples Came to 2 Clinics",
+    "phm.numberOfquasinMaarriage": "Number of Quarish Marriages",
+    "phm.5_or_more_than_times_pregnancy": "Fifth of More Pregnancies",
+    "phm.Number_of_registered_mothers": "Number of Registered Mothers",
+    "phm.number_of_mothers_more_than_living_children_more_than_equal_five_pregnancy": "Having More than 3 Living Children",
+    "phm.No_of_registered_mothers_with_rubella":"Number of Mother who are Protected From Rubella",
+    "phm.No_of_registered_mothers_getting_folic_acid":"Number of Mothers who are Getting Folic Acid",
+    "phm.No_of_house_walkings":"Number of House Visitings",
+    "phm.No_of_coming_clinics_mothers":"Mothers' Participation for Clinics",
+    "phm.new": "New",
+    "phm.old": "Old",
+    "phm.No_of_out_of_mothers":"Number of Mothers Came from Out",
+    "phm.No_of_out_of_registered_mothers":"Registered",
+    "phm.No_of_out_of_notregistered_mothers":"Not-registered",
+    "phm.No_of_mothers_removed_from_village":"Number of Mother Removed",
+    "phm.permenent": "Permanent",
+    "phm.notpermenent": "Not-permanent",
+    "phm.03_Mother_Protection_At_Delivery": "03. Mother Protection At Delivery",
+    "phm.Total_number_of_deliveries_from_permanant_mothers" : "Total number of deliveries from permanant Mothers",
+    "phm.after_walking":"After Visiting",
+    "phm.from_hearing":"Heard",
+    "phm.Number_of_deliveries_from_come_out_notpermanant_mothers": "Number of deliveries from Non-permanant Mothers",
+    "phm.Number_of_deliveries_from_come_out_mothers_who_come_to_permanant_after_delivery": "Number of Deliviries from Permanent Mothers",
+    "phm.Number_of_deliveries_from_come_out_mothers_who_come_to_permanant_after_deliverys": "Number of deliveries from come out mothers who come to permanant after delivery",
+    "phm.delivery": "Delivery",
+    "phm.Yoni_delivery":"Yoni Deliveries",
+    "phm.Sesar_delivary":"Sesar Delivaries",
+    "phm.Home_delivary":"Home Delivaries",
+    "phm.Home_delivary_from_phm":"Home Delivaries by PHM",
+    "phm.Home_delivary_from_other_traineer":"Home Delivaries by a Trained Person",
+    "phm.Home_delivary_from_not_traineer":"Home Delivaries not by a Trained Person",
+    "phm.No_of_mothers_get_piatagasma_protection_in_delivary":"No of Mothers Got Piatagasma Protection while Delivery",
+    "phm.no_of_mothers_check_blood_group_in_delivary":"Number of Mothers Checked Blood Groop before Delivery",
+    "phm.Number_of_mothers_checked_blood_test_in_delivery": "Blood Tests Before Delivery",
+    "phm.No_of_mothers_vdrl_test_before_twelve_weeks":"Before 12 Weeks",
+    "phm.No_of_mothers_vdrl_test_after_twelve_weeks":"After 23 Weeks",
+    "phm.mothers_hemoglobin_test":"Hemoglibin Tests",
+    "phm.No_of_mothers_sugar_test": "Sugar Tests",
+    "phm.before_twelve_weeks_one":"Before 12 Weeks",
+    "phm.twentysix_twentyeight_weeks_one":"26-28 Weeks",
+    "phm.normal": "Normal",
+    "phm.abnormal": "Not-normal",
+    "phm.No_of_mothers_do_hiv_check":"Number of HIV Tests",
+    "phm.Number_of_couples_paricipation_for_clinics": "Couples'Participation for Clinics",
+    "phm.no_of_couples_join_one_clinic":"For One Clinic",
+    "phm.No_of_couples_join_two_clinic":"For two Clinics",
+    "phm.no_of_couples_join_three_clinic":"For Three Clinics",
+    "phm.No_of_mothers_join_child_development_clinic":"For Child Development Clinics",
+    "phm.Number_of_mothers_participation_for_government_clinics": "Participation for Government Clinics",
+    "phm.No_of_mothers_less_than_three_clinics":"3> Clinics",
+    "phm.No_of_mothers_between_four_seven_clinics":"4-7 Clinics",
+    "phm.No_of_mothers_more_than_eight_clinics":"8< Clinics",
+    "phm.No_of_mothers_good_for_vdrl":"Number of Mothers Good for VDRL Test",
+    "phm.No_of_mothers_for_dental_treatement":"Number of Mothers Faced to Dental Tests",
+    "phm.No_of_mothers_identify_dental_problems":"Number of Mothers With Dental Problems",
+    "phm.04_Mother_Protection(1st_After_Delivery_Visit)": "04_Mother_Protection(1st_After_Delivery_Visit)",
+    "phm.No_of_mothers_identify_health_problems_pregnancy_time":"Number of Mothers Identified Health Problems at Pregnancy Time",
+    "phm.Blood_presure" : "Blood Presure",
+    "phm.before":"Before Pregnancy",
+    "phm.after_prgnancy":"After Pregnancy",
+    "phm.Sugar": "Blood Sugar",
+    "phm.Nirakthiya":"Nirakthiya",
+    "phm.Rakthapathya":"Rakthapathya",
+    "phm.Aduma":"Aduma",
+    "phm.Heart_diseases":"Heart Diseases",
+    "phm.Akma_diseases":"Akma Diseases",
+    "phm.Mental_problems":"Mental Problems",
+    "phm.Sexual_problems":"Sexual Problems",
+    "phm.Thairoid_diseases":"Thairoid Diseases",
+    "phm.Urinary_tract_infections":"Urinary Tract Infections",
+    "phm.Other":"Other",
+    "phm.05_Result_Of_Pregnancy": "05. Result Of Pregnancy",
+    "phm.phm.No_of_live_birth": "Number of Live Births",
+    "phm.No_of_live_birth_first":"First Time",
+    "phm.No_of_live_birth_second":"Second Time",
+    "phm._notpermamnt":"Non-permanent",
+    "phm.permamnt": "Permanent",
+    "phm.One_child":"One child Births",
+    "phm.More_child":"More than One Child Births",
+    "phm.More_than_250": "More Than or Equal to 2500g",
+    "phm.less_than_250": "Less Than 2500g",
+    "phm.No_of_abortions":"Number of Abortions",
+    "phm.No_of_death_birth":"Number of Birth Deaths",
+    "phm.No_of_mother_death":"Nuber of Mother Deaths",
+    "phm.After_dilivery_protection": "05.After Delivery Protection",
+    "phm.No_of_after_dekivary_mothers":"Numver of After Delivery Mothers",
+    "phm.after_delivery_visists": "After Delivery Visits by PHM",
+    "phm.New_first_five_days":"In First Five Days",
+    "phm.New_between_six_ten_days":"6-10 Days",
+    "phm.Between_elevn_thirteen_days":"11-13 Days",
+    "phm.New_between_fouteen_twentyone_days":"14-21 Days",
+    "phm.Near_fourtytwo_days":"Near 42 Days",
+    "phm.no_of_after_delivery_mothers_get_vitamine_A":"Mothers who Gets Vitamine A after Delivery",
+    "phm.No_of_mothers_have_after_delivery_problems":"Number of Mothers with after Delivery Problems",
+    "phm.abnormalities": "Abnormalities",
+    "phm.Hemorrhagic":"Hemorrhagic",
+    "phm.diseses_reproductivE_system":"Diseses in Reproductive System",
+    "phm.Urinary_tract":"Urinary Tract",
+    "phm.Vitapiya_infection":"Vitapiya Infection",
+    "phm.Vitapiya_broken":"Vitapiya Broken",
+    "phm.Vaginal_infection":"Vaginal Infection",
+    "phm.Sesariyan_cut":"Sesariyan Cut",
+    "phm.Mental_problem_after":"Mental Problems after Delivery",
+    "phm.Depression":"Depression",
+    "phm.Nipples_erruptions":"Nipples Erruptions",
+    "phm.milk_tightning_breat":"Milk Tightning Breat",
+    "phm.Breast_infection":"Breast Infection",
+    "phm.High_blood_presure":"High Blood Presure",
+    "phm.Heart":"Heart Problems",
+    "phm.Blood_sugar":"Blood Sugar",  
+    "phm.child_protection": "07. Child Protection",
+    "phm.No_of_child":"Number of Children",
+    "phm.No_of_registered_child":"Number of Registered Children",
+    "phm.No_of_removed_child":"Number of Children who Removed from the List",
+    "phm.New_house_walking_after_fourtytwo_days":"After 42 days house visiting for children",
+    "phm.Join_to_the_clinic":"Coming to Children Clinics",
+    "phm.Join_to_the_clinic_before_month":"Before First Month",
+    "phm.Join_to_the_clinic_after_month":"After First Month",
+    "phm.Join_to_the_clinic_old":"Number of Children Joined to Old Clinic",
+    "phm.weight_measuring": "Weight Measuring",
+    "phm.No_of_child_measured_weight_at_clinic":"At Clinic",
+    "phm.No_of_child_measured_weight_at_weight_clinic":"At Weight Center",
+    "phm.Low_weight_child":"Low Weight Children",
+    "phm.More_low_weight_child":"Abnormally Low Weight Children",
+    "phm.High_weight_child":"High Weight Children",
+    "phm.vitaminA": "Number of Children Who Got Vitamin A",
+    "phm.give_vitamine_A_six_month":"At Sixth Month",
+    "phm.give_vitamine_A_twelve_month":"At Twelth Month",
+    "phm.No_of_child_death":"Number of Child Deaths",
+    "phm.No_of_child_death_between_one_seven_days":"1-7 Days",
+    "phm.No_of_child_death_between_eight_twentyeight_days":"8-28 Days",
+    "phm.No_of_child_death_after_twentyeight_days":"After 28 Days",
+    "phm.No_of_child_death_at_birth":"At Birth",
+    "phm.Total_child_death":"Total Number of Child Deaths",
+    "phm.reasons": "Reasos For Child Deaths",
+    "phm.Nishpuranaya":"Nishpuranaya",
+    "phm.New_infections":"New Infections",
+    "phm.Birth_infections":"Birth Infections",
+    "phm.Premature":"Premature",
+    "phm.Other_num":"Other",
+    "phm.one_five_children_protectiob":"08. Child Protection(1-5 years)",
+    "phm.No_of_child_between_one_two":"Number of Children Between 1-2",
+    "phm.No_of_child_between_two_five":"Number of Children Between 2-5",
+    "phm.No_of_nursary_child":"Nursary Children",
+    "phm.New_house_walking_for_small_child":"House Visists for Small Children",
+    "phm.New_house_walking_for_nursary_child":"House Visists for Nursary Children",
+    "phm.No_of_small_child_measure_weight_at_clinic":"Weight Measuring 1-2 Year Children",
+    "phm.No_of_small_child_low_weight":"Low Weight",
+    "phm.No_of_small_child_more_low_weight":"Abnormally Low Weight",
+    "phm.No_of_small_child_high_weight":"High Weight",
+    "phm.No_of_nurasry_child_measure_weight_at_clinic":"Weight Measuring Nursary Children",
+    "phm.no_of_child_give_vitamine_A": "Children who get Vitamin A",
+    "phm.no_of_child_give_vitamine_A_18_month":"At 18 Months",
+    "phm.no_of_child_give_vitamine_A_2_yr":"At Year 2",
+    "phm.no_of_child_give_vitamine_A_3_yr":"At Year 3",
+    "phm.no_of_child_give_vitamine_A_4_yr":"At Year 4",
+    "phm.no_of_child_give_warm_18_month":"Children who Get Warm Treatments",
+    "phm.coming_to_clinics": "Number of Children who Comes for Clinics",
+    "phm.No_of_coming_clinic_new_1_2_yr":"1-2 Years",
+    "phm.no_of_coming_clinic_new_2_5_yr":"2-5 Years",
+    "phm.No_of_small_child_death":"Number of Child Deaths(1-5)",
+    "phm.reasons_for_deaths": "Reasons for Deaths",
+    "phm.Accident":"By Accidents",
+    "phm.Infections":"Infections",
+    "phm.Diarrhea":"Diarrhea",
+    "phm.Respiratory":"Respiratory",
+    "phm.Other_numb":"Other Reasons",
+    "phm.No_of_aefi_child":"Number of AEFI Chidren",
+    "phm.young_child_protection":"09. Child Protection(5-10 years and 10-19 years)",
+    "phm.No_of_new_youngers":"New Youngers",
+    "phm.No_of_new_registered_new_youngers":"Registered New Youngers",
+    "phm.No_of_removed_new_youngers":"Removed New Youngers",
+    "phm.No_of_house_walking_new_youngers":"House Visitings for New Youngers",
+    "phm.No_of_problems":"Problems",
+    "phm.No_of_enter_phm":"Number of Children That PHM Entered",
+    "phm.No_of_referes":"Number of Children That PHM Refered",
+    "phm.young_deaths": "New Youngers' Deaths",
+    "phm.No_of_death_between_5_10_yr":"5-10 Years",
+    "phm.no_of_death_between_10_19_yr":"10-19 Years",
+    "phm.family_planing": "10. Family Planning",
+    "phm.tablets": "Tablets",
+    "phm.No_of_couples_start_month_tablet":"Number of Couples at Satrt Month",
+    "phm.New_identified_tablet":"New Identitied Couples",
+    "phm.Removed_tablet":"New Removed Couples",
+    "phm.No_of_packet":"Number of Packets",
+    "phm.injectins": "Injection",
+    "phm.Uterus": "Uterus",
+    "phm.Hormona": "Hormona",
+    "phm.Condom": "Condom",
+    "phm.Lady": "Lady",
+    "phm.Man": "Man",
+    "phm.Total_couples_using_new_family_palning":"Total Number of Couples Using New Family Planing Methods",
+    "phm.OldPlaning": "Couples Who Use Old Family Planing Methods",
+    "phm.No_of_couples_start_month_old":"At Start Month",
+    "phm.New_identified_old":"Newly Identified Couples",
+    "phm.accept_new_old":"Number of Couples Who Accepted New Methods",
+    "phm.Removed_old":"Number of Couples Who Rejected New Methods",
+    "phm.notusing": "Couples Who Don't Use Family Planing Methods",
+    "phm.notusingrejected": "Number of Couples Who Rejected Methods",
+    "phm.madasaru": "Number of Sub-fertile Couples",
+    "phm.No_of_couples_start_month_madasaru":"At Start Month",
+    "phm.New_identified_madasaru":"Newly Identified Couples",
+    "phm.prganant_that_month_madasaru":"Pregnant Mothes",
+    "phm.Removed_madasaru":"Number of Mothers Who are Removed from the List",
+    "phm.Reffer_madasaru":"Number of Mothers to be Removed",
+    "phm.failed": "Mothers Who Failed Using Family Planing Methos",
+    "phm.Fail_family_plan_one_detail":"Type of Method",
+    "phm.Fail_family_plan_one":"Number",
+    "phm.Fail_family_plan_two_detai":"Type of Method",
+    "phm.Fail_family_plan_two":"Number",
+    "phm.No_of_high_infections":"Number of High-infections",
+    "phm.No_of_house_walking_new_famiy_planners":"House Visits for New Family Planing Users",
+    "phm.men_women_health": "11. Men And Women Health",
+    "phm.No_of_arresements": "Newly identified men and women with arresements",
+    "phm.No_of_arresements_man":"Men",
+    "phm.No_of_arresements_woman":"Women",
+    "phm.No_of_arresements_mental_new":"Mental situation of men and women with arresements",
+    "phm.No_of_reffers":"Number of Refers",
+    "phm.other": "12. Other",
+    "phm.About_nutritions":"About Nutritions",
+    "phm.No_of_clinics_married":"Clinics for Married Couples",
+    "phm.No_of_suawanari_clinic":"Number of Suwanari Clinics",
+    "phm.house_wlking_suawanari_clinic":"House Visiting for Couples Who Joined Suwanari Clinics",
+    "phm.No_of_clinic_joined":"Number of Clinics You Joined",
+    "phm.No_of_special_clinics":"Number of Special Clinics",
+    "phm.No_of_school_clinic":"Number of School Clinics",
+    "phm.checking": "13. Coming for checking",
+    "phm.Officer":"Officer",
+    "phm.Health_officer":"Health Officer",
+    "phm.Deputy_officer":"Deputy Officer",
+    "phm.Nurse":"Nurse",
+    "phm.Mo_nurse":"Mo Nurse",
+    "phm.Phm":"PHM"
     
 }
