--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -611,6 +611,272 @@
     "pregm.if_died": "නව ජන්ම මරණ",
     "pregm.does_mother_comes_to_post_delivery_clinics": "පසු ප්‍රසව සායනයට පැමිණියේද?",
     "pregm.accepted_family_organization_method": "පවුල් සංවිධාන ක්‍රමයක් පිළිගත්තේද?",
-    "pregm.if_no":"පිලිනොගත්තේනම් හේතුව"
+    "pregm.if_no":"පිලිනොගත්තේනම් හේතුව",
+
+    "phm.dailyUpdateForm": "පවුල් සෞඛ්‍යය නිලධාරිනියගේ මාසික වාර්තාව",
+    "phm.MOH_division": "ප. සෞ. සේ. නි. කොට්ඨාශය",
+    "phm.date_of_today" : "අද දිනය",
+    "phm.Batch_no" : "කාණ්ඩ අංකය",
+    "phm.Division" : "සෞ. වෛ. කොට්ඨාශය",
+    "phm.Moh_population": "පවුල් සෞඛ්‍යය නිලධාරිනියගේ කොට්ඨාශයේ ජනගහනය",
+    "phm.Moh_population_urban" :"නාගරික",
+    "phm.Moh_population_rural" :"ග්‍රාමීය",
+    "phm.Moh_population_other" :"වතු",
+    "phm.importantThings": "වැදගත් සිදුවීම්",
+    "phm.Number_of_birth_for_year":"වර්ෂයට ඇස්තමේන්තු කල",
+    "phm.Number_of_baby_birth_for_year":"දරු උපත්",
+    "phm.Number_of_baby_death_for_year":"ළදරු මරණ",
+    "phm.Number_of_mother_death_for_year":"මව් මරණ",
+    "phm.Number_of_child_death_for_year":"ළමා මරණ",
+    "phm.approvedfamilydetails":"01. යෝග්‍යතා පවුල් පිලිබඳව තොරතුරු",
+    "phm.No_of_approved_families_start_of_month":"මාසය මුලදී භාරව සිටින යෝග්‍යතා පවුල් ගනන",
+    "phm.No_of_new_registered_family":"අලුතින් ලියාපදිංචි කරන ලද ගණන",
+    "phm.No_of_removed_family_from_form":"ලේඛනයෙන් ඉවත් කල ගණන",
+    "phm.No_of_house_walking":"අලුතින් ලියාපදිංචි කරන ලද නවක විවාපත් පවුල් ගනන",
+    "phm.motherProtection": "02. මාතෘ සංරක්ෂණය ලියාපදිංචි කරන අවස්තාවේදී",
+    "phm.NoofpregnantMothers": "ගර්භණී මවුවරුන් ගණන",
+    "phm.low_risk":"අඩු අවදානම්",
+    "phm.high_risk":"වැඩි අවදානම්",
+    "phm.Registered_mothers": "ලියාපදිංචි වී ඇති මව්වරුන් ගණන",
+    "phm.before_eight_weeks":"සති 8කට පෙර",
+    "phm.between_eight_twelve_weeks":"සති 8-12 අතර",
+    "phm.after_twelve_weeks":"සති 12කට පසු",
+    "phm.age": "වයස",
+    "phm.Mothers_with_1st_Pregnancy": "ප්‍රථම ගර්භණී දරන මව්වරුන් ගණන",
+    "phm.numberOfRegistered": "ලියාපදිංචි වී ඇති මව්වරුන් ගණන",
+    "phm.numberOfBeforePregnancyTest": "පෙර ගර්භ පිරික්සුම් සිදුකල ගණන",
+    "phm.numberOfCouplesComeTo2Visit": "පෙර ගර්භණී සැසි දෙකක් සදහා පැමිණි යුවල් ගණන",
+    "phm.numberOfquasinMaarriage": "ලේ ඥාතීන් අතර විවාහ සිදුවූ ගණන",
+    "phm.5_or_more_than_times_pregnancy": "5 වෙනි ගර්භණීභාවය හා ඊට වැඩි මව්වරුන් ",
+    "phm.Number_of_registered_mothers": "ලියාපදිංචි වී ඇති මව්වරුන් ගණන",
+    "phm.number_of_mothers_more_than_living_children_more_than_equal_five_pregnancy": "ජීවත්ව සිටින ළමුන් තිදෙනකු හෝ ඊට වැඩි මව්වරුන් ගණන",
+    "phm.No_of_registered_mothers_with_rubella":"ලියාපදිංචි ගර්භණී   මව්වරුන්ගෙන් රුබෙල්ලා ආරක්ෂාව ලබා ඇති ගණන",
+    "phm.No_of_registered_mothers_getting_folic_acid":"ලියාපදිංචියේදී ෆෝලික් අප්ලය ලබා ගනිමින් සිටි මව්වරුන් ගනන",
+    "phm.No_of_house_walkings":"ගෘහ පැමිනීම",
+    "phm.No_of_coming_clinics_mothers":"පූර්ව ප්‍රසව මව්වරුන් සායනික පැමිනීම",
+    "phm.new": "නව",
+    "phm.old": "පැරණි",
+    "phm.No_of_out_of_mothers":"පිටතින් පැමිනි මව්වරුන් ගණන",
+    "phm.No_of_out_of_registered_mothers":"ලියාපදිංචි",
+    "phm.No_of_out_of_notregistered_mothers":"ලියාපදිංචි නොමැති",
+    "phm.No_of_mothers_removed_from_village":"ක්ෂේත්‍රය හැර ගිය ගර්භණී මව්වරුන් ගණන",
+    "phm.permenent": "ස්ථීර",
+    "phm.notpermenent": "ස්ථීර නොවන",
+    "phm.03_Mother_Protection_At_Delivery": "03. මව් සංරක්ෂණය ප්‍රසූථ වාර්තාකරණයේදී",
+    "phm.Total_number_of_deliveries_from_permanant_mothers" : "ස්ථීර පදිංචි මව්වරුන් වාර්තා කල මුලු ප්‍රසූත ගණන",
+    "phm.after_walking":"පසු ගමන් මගින්",
+    "phm.from_hearing":"ආරංචි මගින්",
+    "phm.Number_of_deliveries_from_come_out_notpermanant_mothers": "ස්ථීර නොවන පදිංචි මව්වරුන් වාර්තා කල මුලු ප්‍රසූත ගණන",
+    "phm.Number_of_deliveries_from_come_out_mothers_who_come_to_permanant_after_delivery": "පිටින් පැමිණි මව්වරුන් වාර්තා කල මුලු ප්‍රසූත ගණන",
+    "phm.Number_of_deliveries_from_come_out_mothers_who_come_to_permanant_after_deliverys": "ප්‍රසූතියෙන් පසු පිටතින් ස්ථීර පදිංචියට පැමිණි මව්වරුන් වාර්තා කල මුලු ප්‍රසූත ගණන",
+   "phm.delivery": "ආයතනික ප්‍රසූත",
+    "phm.Yoni_delivery":"යෝනි ප්‍රසූත",
+    "phm.Sesar_delivary":"සීසර් සැත්කම්",
+    "phm.Home_delivary":"ගෘහ ප්‍රසූත",
+    "phm.Home_delivary_from_phm":"ප. සෞ. සේ. නි. විසින්",
+    "phm.Home_delivary_from_other_traineer":"වෙනත් පුහුණු",
+    "phm.Home_delivary_from_not_traineer":"නුපුහුණු ",
+    "phm.No_of_mothers_get_piatagasma_protection_in_delivary":"ප්‍රසූත අවස්ථාව වන විට පිටගැස්ම ධූලකාභය සදහා එන්නත ලබාගෙන සිටි මව්වරුන් ගණන ",
+    "phm.no_of_mothers_check_blood_group_in_delivary":"ප්‍රසූත අවස්ථාව වන විට රුධිර ගණය  පරීක්ෂා කර ඇති මව්වරුන් ගණන ",
+    "phm.Number_of_mothers_checked_blood_test_in_delivery": "ප්‍රසූත අවස්ථාවට පෙර සිදු කරන රුධිර පරීක්ෂණ",
+    "phm.No_of_mothers_vdrl_test_before_twelve_weeks":"සති 12ට පෙර",
+    "phm.No_of_mothers_vdrl_test_after_twelve_weeks":"සති 12ට පසු",
+    "phm.mothers_hemoglobin_test":"හිමොග්ලොබින්",
+    "phm.No_of_mothers_sugar_test": "රුධිර සීනි පරීක්ෂාව",
+    "phm.before_twelve_weeks_one":"සති 12ට පෙර",
+    "phm.twentysix_twentyeight_weeks_one":"26-28 සති තුලදී",
+    "phm.normal": "සාමාන්‍ය",
+    "phm.abnormal": "සාමාන්‍ය නොවන ",
+    "phm.No_of_mothers_do_hiv_check":"HIV පූර්ව පරීක්ෂාව කල මව්වරුන් ගණන",
+    "phm.Number_of_couples_paricipation_for_clinics": "පූර්ව ප්‍රසව සැසි සදහා සහභාගි වූ පවුල් ගණන",
+    "phm.no_of_couples_join_one_clinic":"සායන 1ක් සදහා",
+    "phm.No_of_couples_join_two_clinic":"සායන 2ක් සදහා",
+    "phm.no_of_couples_join_three_clinic":"සායන 3ක් සදහා",
+    "phm.No_of_mothers_join_child_development_clinic":"ළමා සංවර්ධන සායන සදහා",
+    "phm.Number_of_mothers_participation_for_government_clinics": "රජයේ සායන සදහා සහභාගි වීම",
+    "phm.No_of_mothers_less_than_three_clinics":"සායන 3කට අඩුවෙන්",
+    "phm.No_of_mothers_between_four_seven_clinics":"සායන 4 -7",
+    "phm.No_of_mothers_more_than_eight_clinics":"සායන 8කට වැඩියෙන්",
+    "phm.No_of_mothers_good_for_vdrl":"VDRL පරීක්ෂාව ප්‍රතික්‍රියා සහිත වූ මව්වරුන් සංඛ්‍යාව",
+    "phm.No_of_mothers_for_dental_treatement":"දන්ත පරීක්ෂාව සදහා පූර්ව පරීක්ෂා කල මව්වරුන් සංඛ්‍යාව",
+    "phm.No_of_mothers_identify_dental_problems":"දන්ත ගැටලු සහිත මව්වරුන් සංඛ්‍යාව",
+    "phm.04_Mother_Protection(1st_After_Delivery_Visit)": "04. මාතෘ සංරක්ෂණය (ප්‍රථම පසු ප්‍රසව ගමනේදී )",
+    "phm.No_of_mothers_identify_health_problems_pregnancy_time":"ගැබිනි සමයේ රෝගී තත්වයන් වාර්තා කල මව්වරුන් ගණන",
+    "phm.Blood_presure" : "අධි රුධිර පීඩනය",
+    "phm.before":"නිදන්ගත",
+    "phm.after_prgnancy":"ගර්භණී තත්වය නිසා",
+    "phm.Sugar": "දියවැඩියාව ",
+    "phm.Nirakthiya":"නිරක්තිය",
+    "phm.Rakthapathya":"රක්තපාතය",
+    "phm.Aduma":"ඇදුම",
+    "phm.Heart_diseases":"හදවත් රෝග",
+    "phm.Akma_diseases":"අක්මා රෝග ",
+    "phm.Mental_problems":"මානසික රෝග ",
+    "phm.Sexual_problems":"ලිංගාශ්‍රිත රෝග",
+    "phm.Thairoid_diseases":"තයිරොයිඩ් ග්‍රන්ථිය ආශ්‍රිත රෝග",
+    "phm.Urinary_tract_infections":"ක්ශය රෝග",
+    "phm.Other":"වෙනත් රෝග",
+    "phm.05_Result_Of_Pregnancy": "05. ගර්භණීභාවයේ ප්‍රතිඵලය ",
+    "phm.phm.No_of_live_birth": "සජීව උපත් ගණන",
+    "phm.No_of_live_birth_first":"පලමු ",
+    "phm.No_of_live_birth_second":"දෙවන වර",
+    "phm._notpermamnt":"ස්ථීර නොවන",
+    "phm.permamnt": "ස්ථීර",
+    "phm.One_child":"එක් දරු උපත්",
+    "phm.More_child":"බහු උපත්",
+    "phm.More_than_250": "2500g වැඩි හෝ සමාන",
+    "phm.less_than_250": "2500g අඩු",
+    "phm.No_of_abortions":"ගබ්සා ගණන ",
+    "phm.No_of_death_birth":"මල උපත් ගණන",
+    "phm.No_of_mother_death":"මව් මරණ ගණන",
+    "phm.After_dilivery_protection": " 06. පසු ප්‍රසව සංරක්ෂණය",
+    "phm.No_of_after_dekivary_mothers":"ප. සෞ. සේ. නි. භාරයේ සිටින පසු ප්‍රසව මව්වරුන් ගණන",
+    "phm.after_delivery_visists": "ප. සෞ. සේ. නි විසින් සිදු කරන ලද පසු ගමන්",
+    "phm.New_first_five_days":"පලමු දින 5",
+    "phm.New_between_six_ten_days":"දින 6-10",
+    "phm.Between_elevn_thirteen_days":"දින 11-13 ",
+    "phm.New_between_fouteen_twentyone_days":"දින 14-21 ",
+    "phm.Near_fourtytwo_days":"දින 42 ආසන්නයේ",
+    "phm.no_of_after_delivery_mothers_get_vitamine_A":"විටමින් A අධි මාත්‍රාව ලබාගත් පසු ප්‍රසව මව්වරුන් ගණන ",
+    "phm.No_of_mothers_have_after_delivery_problems":"පසු ප්‍රසව සංකුලතා ඇතිවූ මව්වරුන් ගණන",
+    "phm.abnormalities": "සංකුලතා",
+    "phm.Hemorrhagic":"රක්තපාත",
+    "phm.diseses_reproductivE_system":"ප්‍රජනක පද්ධතිය ආසාදනය",
+    "phm.Urinary_tract":"මුත්‍රා පද්ධතියේ ආසාදන",
+    "phm.Vitapiya_infection":"විටපීය ආසාදනය ",
+    "phm.Vitapiya_broken":"විටපීය මැහුම්",
+    "phm.Vaginal_infection":"යෝනි මාර්ගයේ ආගන්තුක ද්‍රව්‍ය තිබීම",
+    "phm.Sesariyan_cut":"ආසාදිත සිසේරියන් කැපුම",
+    "phm.Mental_problem_after":"පසු ප්‍රසව මානසික රෝග",
+    "phm.Depression":"පසු ප්‍රසව විශාදිය",
+    "phm.Nipples_erruptions":"තන පුඩු පිපිරීම",
+    "phm.milk_tightning_breat":"පියයුරේ කිරි තදවීම",
+    "phm.Breast_infection":"පියයුරු ආසාදන හෝ සැරව ගෙඩි",
+    "phm.High_blood_presure":"අදි රුධිර පීඩනය",
+    "phm.Heart":"හදවත් අකරනිය",
+    "phm.Blood_sugar":"දියවැඩියාව", 
+    "phm.child_protection": "7. ළදරු සංරක්ෂණය",
+    "phm.No_of_child":"භාරයේ සිටින දරුවන් ගණන",
+    "phm.No_of_registered_child":"මාසය තුලදී ලියාපදිංචි කල දරුවන්ගේ ගණන",
+    "phm.No_of_removed_child":"ලේඛනයෙන් ඉවත් කරන ලද දරුවන් ගණන ",
+    "phm.New_house_walking_after_fourtytwo_days":"ළදරුවන් සදහා ගෘහ ඇවිදීම දින 42ට පසු",
+    "phm.Join_to_the_clinic":"ළදරු සායනික පැමිණීම",
+    "phm.Join_to_the_clinic_before_month":"පලමු මසට පෙර",
+    "phm.Join_to_the_clinic_after_month":"පලමු මසින් පසු",
+    "phm.Join_to_the_clinic_old":"පැරණි සායනයන්ට සහභාගි වූ දරුවන් ගණන ",
+    "phm.weight_measuring": "බර කිරන ලද දරුවන් ගණන",
+    "phm.No_of_child_measured_weight_at_clinic":"සායනයේදී",
+    "phm.No_of_child_measured_weight_at_weight_clinic":"බර කිරන මධ්‍යස්ථානයේදී",
+    "phm.Low_weight_child":"මධ්‍යස්ථ අඩු බර දරුවන් ගණන",
+    "phm.More_low_weight_child":"උග්‍ර බර අඩු දරුවන් ගණන",
+    "phm.High_weight_child":"අධි බර වැඩි දරුවන් ගණන",
+    "phm.vitaminA": "විටමින් A අධි මාත්‍රාව ලබාදුන් දරුවන් ගණන",
+    "phm.give_vitamine_A_six_month":"මාස 6දී",
+    "phm.give_vitamine_A_twelve_month":"මාස 12දී",
+    "phm.No_of_child_death":"ළදරු මරණ ගණන ",
+    "phm.No_of_child_death_between_one_seven_days":"දින 1-7",
+    "phm.No_of_child_death_between_eight_twentyeight_days":"දින 8-28",
+    "phm.No_of_child_death_after_twentyeight_days":"දින 28ට පසු",
+    "phm.No_of_child_death_at_birth":"උපතේදී",
+    "phm.Total_child_death":"මුලු ළමා මරණ සංඛ්‍යාව ",
+    "phm.reasons": "මරණ සදහා හේතු",
+    "phm.Nishpuranaya":"නිශ්පූරනය",
+    "phm.New_infections":"නව ජන්ම ආසාදනය ",
+    "phm.Birth_infections":"සංජානනීය ආබාධ ",
+    "phm.Premature":"නොමේරූ",
+    "phm.Other_num":"වෙනත්",
+    "phm.one_five_children_protectiob":"8. ළමා සංරක්ෂණය(අවු 1-5) ",
+    "phm.No_of_child_between_one_two":"භාරයේ සිටින කුඩා දරුවන් ගණන (අවු 1-2)",
+    "phm.No_of_child_between_two_five":"භාරයේ සිටින කුඩා දරුවන් ගණන (අවු 2-5)",
+    "phm.No_of_nursary_child":"පෙර පාසල්",
+    "phm.New_house_walking_for_small_child":"කුඩා දරුවන් සදහා කරන ගෘහ ඇවිදීම ",
+    "phm.New_house_walking_for_nursary_child":"පෙර පාසල් සදහා කරන ගෘහ ඇවිදීම",
+    "phm.No_of_small_child_measure_weight_at_clinic":"බර කිරන ලද කුඩා දරුවන්(අවු 1-2)",
+    "phm.No_of_small_child_low_weight":"මධ්‍යස්ථ අඩු බර දරුවන් ගණන",
+    "phm.No_of_small_child_more_low_weight":"උග්‍ර බර අඩු දරුවන් ගණන",
+    "phm.No_of_small_child_high_weight":"අධි බර වැඩි දරුවන් ගණන",
+    "phm.No_of_nurasry_child_measure_weight_at_clinic":"බර කිරන ලද පෙර පාසල් දරුවන්(වයස 2-5",
+    "phm.no_of_child_give_vitamine_A": "විටමින් A  ලබාගන්නා දරුවන් ",
+    "phm.no_of_child_give_vitamine_A_18_month":"මාස 18දී",
+    "phm.no_of_child_give_vitamine_A_2_yr":"දෙවන වසරේදී",
+    "phm.no_of_child_give_vitamine_A_3_yr":"තෙවන වසරේදී",
+    "phm.no_of_child_give_vitamine_A_4_yr":"සිව්වන වසරේදී",
+    "phm.no_of_child_give_warm_18_month":"පණු ප්‍රතිකාර ලබාගන්නා දරුවන් ",
+    "phm.coming_to_clinics": "සායන සදහා පැමිණෙන දරුවන් ",
+    "phm.No_of_coming_clinic_new_1_2_yr":"(අවු 1-2)",
+    "phm.no_of_coming_clinic_new_2_5_yr":"(අවු 2-5)",
+    "phm.No_of_small_child_death":"ළමා මරණ ගණන (1-5)",
+    "phm.reasons_for_deaths": "මරණ සදහා හේතු",
+    "phm.Accident":"හදිසි අනතුරු ",
+    "phm.Infections":"සංජානනීය ආබාධ",
+    "phm.Diarrhea":"පාචන රෝග",
+    "phm.Respiratory":"ස්වසන රෝග",
+    "phm.Other_numb":"වෙනත්",
+    "phm.No_of_aefi_child":"ප්‍රතිශක්තිකරණයෙන් පසු අතුරු ආබාධ ඇතිවූ ළමයින් ගණන",
+    "phm.young_child_protection":"09. ළමා (අවු 5-10) හා නව යව්වන (අවු 10-19) සංරක්ෂණය 5",
+    "phm.No_of_new_youngers":"භාරයේ සිටින නව යව්වනයින ගණන ",
+    "phm.No_of_new_registered_new_youngers":"අලුතින් ලියාපදිංචි කල ගණන ",
+    "phm.No_of_removed_new_youngers":"පළාත හැරගිය ගණන ",
+    "phm.No_of_house_walking_new_youngers":"ගෘහ පිවිසීම් ගණන ",
+    "phm.No_of_problems":"හදුනාගත් ගැටලු සහිත නව යව්වනයින් ගණන ",
+    "phm.No_of_enter_phm":"ප. සෞ. සේ. නි. මැදිහත් වූ ගණන ",
+    "phm.No_of_referes":"යොමු කල ගණන",
+    "phm.young_deaths": "වාර්තා වූ මරණ ගණන",
+    "phm.No_of_death_between_5_10_yr":"අවු 5-10",
+    "phm.no_of_death_between_10_19_yr":"අවු 10-19",
+    "phm.family_planing": "10. පවුල් පාලනය ",
+    "phm.tablets": "ගිලින පෙති",
+    "phm.No_of_couples_start_month_tablet":"මාසය මුලදී සිටින යුවල්",
+    "phm.New_identified_tablet":"අලුතින් හදුනාගත් ගණන ",
+    "phm.Removed_tablet":"ක්‍රමය අත් හරින ලද/ පළාත හැරගිය/ වයස වැඩි ගණන ",
+    "phm.No_of_packet":"බෙදා දෙන ලද පෙති පැකට් ගණන ",
+    "phm.injectins": "නික්ශේපන",
+    "phm.Uterus": "අන්ත: ගර්භාශිත උපකරණ ",
+    "phm.Hormona": "හෝමෝන තැන්පතු",
+    "phm.Condom": "රබර් කොපු",
+    "phm.Lady": "ස්ත්‍රී වන්ධ්‍යාකරනය",
+    "phm.Man": "පුරුෂ වන්ධ්‍යාකරනය",
+    "phm.Total_couples_using_new_family_palning":"නවීන ක්‍රම භාවිතා කරන යුවල් ගණන",
+    "phm.OldPlaning": "ස්වභාවික/ සම්ප්‍රදායික ක්‍රම භාවිතා කරන පවුල් ගණන ",
+    "phm.No_of_couples_start_month_old":"පළමු මාස 6",
+    "phm.New_identified_old":"අලුතින් හදුනාගත් ගණන",
+    "phm.accept_new_old":"නවීන සැලසුම් ක්‍රම පිලිගත් පවුල් ගණන ",
+    "phm.Removed_old":"නවීන සැලසුම් ක්‍රම පිලි නොගත් පවුල් ගණන ",
+    "phm.notusing": "පවුල් සැලසුම් ක්‍රම භාවිතා කල යුතුමුත් භාවිතා නොකරන පවුල් ගණන",
+    "phm.notusingrejected": "නවීන සැලසුම් ක්‍රම පිලි නොගත් පවුල් ගණන",
+    "phm.madasaru": "මදසරු යුවල් ගණන",
+    "phm.No_of_couples_start_month_madasaru":"පළමු මසදී",
+    "phm.New_identified_madasaru":"අලුතින් හදුනාගත් ගණනs",
+    "phm.prganant_that_month_madasaru":"ගර්භණීභාවයට පත්වූ ගණන",
+    "phm.Removed_madasaru":"පළාත හැරගිය /වයස වැඩි පවුල් ගණන ",
+    "phm.Reffer_madasaru":"ඉවත් කිරීමට ඇති මව්වරුන් ගණන",
+    "phm.failed": "පවුල් සැලසුම් ක්‍රම අසාර්ථක වූ යුවල් ගණන",
+    "phm.Fail_family_plan_one_detail":"ක්‍රමය ",
+    "phm.Fail_family_plan_one":"ගණන",
+    "phm.Fail_family_plan_two_detai":"ක්‍රමය ",
+    "phm.Fail_family_plan_two":"ගණන",
+    "phm.No_of_high_infections":"උග්‍ර සංකුලතා ඇතිවූ ගණන",
+    "phm.No_of_house_walking_new_famiy_planners":"නවීන සැලසුම් ක්‍රම පිලිගන්නන් සදහා කල මුලු ගෘහ ඇතුල්වීම් ගණන",
+    "phm.men_women_health": " 11. ස්ත්‍රී පුරුෂ සමාජභාවය සහ සෞඛ්‍යය",
+    "phm.No_of_arresements": "අලුතින් හදුනාගත් හිංසනයට ලක්වූ ගණන",
+    "phm.No_of_arresements_man":"පුරුෂ",
+    "phm.No_of_arresements_woman":"ස්ත්‍රී",
+    "phm.No_of_arresements_mental_new":"හිංසනයට ලක්වූ චිත්තවේගී සුරැකියාව",
+    "phm.No_of_reffers":"යොමු කල ගණන ",
+    "phm.other": "12. වෙනත් ක්‍රියාකාරකම්",
+    "phm.About_nutritions":"පෝෂණය පිළිබද කල පෙන්වීම්",
+    "phm.No_of_clinics_married":"සහභාගී වූ නවක විවාපත්‍ පවුල් සදහා පැවති ගර්භණී සැසි ගණන",
+    "phm.No_of_suawanari_clinic":"සුවනාරී සායන සදහා යොමුකරන ලද ගණන",
+    "phm.house_wlking_suawanari_clinic":"සුවනාරී සායන සදහා ගෘහ පිවිසුම",
+    "phm.No_of_clinic_joined":"සහභාගි වූ සායන ගණන",
+    "phm.No_of_special_clinics":"විශේෂ සායන ගණන",
+    "phm.No_of_school_clinic":"පාසල් සායන ගණන ",
+    "phm.checking": "13. අධීක්ෂණ සදහා පැමිණිම",
+    "phm.Officer":"වෛද්‍ය නිලධාරී",
+    "phm.Health_officer":"සෞඛ්‍යය වෛද්‍ය නිලධාරී",
+    "phm.Deputy_officer":"අතිරේක ප්‍රාදේශීය පරිපාලන මහජන ස හෙද නිලධාරීනිය",
+    "phm.Nurse":"ප්‍රාදේශීය පරිපාලන මහජන සෞඛ්‍යය හෙද නිලධාරීනිය",
+    "phm.Mo_nurse":"මහජන සෞඛ්‍යය හෙද සොහොයුරිය",
+    "phm.Phm":"පරිපාලන පවුල් සෞඛ්‍යය සේවා නිලධාරීනී"
     
     }
