phm daily report form translation

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -618,6 +618,34 @@
     "pregm.accepted_family_organization_method": "Does Accepted A Family Planning Method?",
     "pregm.if_no":"If No Why?",
 
+    "phm.dailyUpdateForm": "PHM DAILY UPDATE FORM",
+    "phm.MOH_division": "MOH sub-devision",
+    "phm.date_of_today" : "Today's Date",
+    "phm.Batch_no" : "Batch Number",
+    "phm.Division" : "MOH Devision",
+    "phm.Moh_population": "MOH Sub-devision Population",
+    "phm.Moh_population_urban" :"Urban",
+    "phm.Moh_population_rural" :"Rural",
+    "phm.Moh_population_other" :"Other",
+    "phm.importantThings": "Important Situations",
+    "phm.Number_of_birth_for_year":"Number of Births for the year",
+    "phm.Number_of_baby_birth_for_year":"Births",
+    "phm.Number_of_baby_death_for_year":"Infant deaths",
+    "phm.Number_of_mother_death_for_year":"Maternal deaths",
+    "phm.Number_of_child_death_for_year":"Child deaths",
+    "phm.approvedfamilydetails":"01. Approved Family Details",
+    "phm.No_of_approved_families_start_of_month":"At the Start of the Month",
+    "phm.No_of_new_registered_family":"Newly Registered Families",
+    "phm.No_of_removed_family_from_form":"Number of Families Removed from the List",
+    "phm.No_of_house_walking":"Newly Registered Married Couples(House Walkings)",
+    "phm.motherProtection": "02. Mother Pretection(At Registration)",
+    "phm.NoofpregnantMothers": "Number of Pregnant Mothers",
+    "phm.low_risk":"Low Risked",
+    "phm.high_risk":"High Risked",
+    "phm.Registered_mothers": "Number of Registered Mothers",
+    "phm.before_eight_weeks":"Before 8 Weeks",
+    "phm.between_eight_twelve_weeks":"Between 8-12 Weeks",
+    "phm.after_twelve_weeks":"After 12 weeks",
     "phm.age": "Age",
     "phm.Mothers_with_1st_Pregnancy": "Mothers with 1st Pregnancy",
     "phm.numberOfRegistered": "Number of Registered Mothers",
