--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -72,8 +72,9 @@
     "mother.gravidity": "කීවෙනි ගර්භයද",
     "mother.POA": "ගර්භ සති ගණන",
     "mother.EDD": "බලාපොරොත්තු වන ප්‍රසව දිනය ",
+    "mother.vaccine":"එන්නත්",
     "mother.protection_against_tetanus": "පිටගැස්ම ධූලකාභයෙන් ආරක්ෂාව",
-    "mother.protection_against_rubella": "",
+    "mother.protection_against_rubella": "රුබෙල්ලා සඳහා ආරක්ෂාව",
     "mother.risk_conditions": "අවදානම් තත්ව", 
     "mother.risk_conditions_high": "වැඩි",
     "mother.risk_conditions_low": "අඩු",
