--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -158,6 +158,7 @@
     "motherBabyJoined.vitamin_a_mega_dose__at_year_two": "අවුරුදු 2 දී",
     "motherBabyJoined.vitamin_a_mega_dose__at_year_two _and_half": "අවුරුදු 2 1/2 දී",
     "motherBabyJoined.vitamin_a_mega_dose__at_year_three": "අවුරුදු 3 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_three_and_half": "අවුරුදු 3  1/2 දී ",
     "motherBabyJoined.vitamin_a_mega_dose__at_year_four": "අවුරුදු 4 දී",
     "motherBabyJoined.vitamin_a_mega_dose__at_year_four_and_half": "අවුරුදු 4 1/2 දී",
     "motherBabyJoined.vitamin_a_mega_dose__at_year_nine": "අවුරුදු 9 දී",
