--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -827,11 +827,11 @@
     "phm.young_deaths": "වාර්තා වූ මරණ ගණන",
     "phm.No_of_death_between_5_10_yr":"අවු 5-10",
     "phm.no_of_death_between_10_19_yr":"අවු 10-19",
-    "phm.family_planing": "10. පවුල් පාලනය ",
+    "phm.family_planing": "10. පවුල් සැලසුම් ",
     "phm.tablets": "ගිලින පෙති",
     "phm.No_of_couples_start_month_tablet":"මාසය මුලදී සිටින යුවල්",
     "phm.New_identified_tablet":"අලුතින් හදුනාගත් ගණන ",
-    "phm.Removed_tablet":"ක්‍රමය අත් හරින ලද/ පළාත හැරගිය/ වයස වැඩි ගණන ",
+    "phm.Removed_tablet":"ක්‍රමය අත් හරින ලද/ වයස වැඩි ගණන ",
     "phm.No_of_packet":"බෙදා දෙන ලද පෙති පැකට් ගණන ",
     "phm.injectins": "නික්ශේපන",
     "phm.Uterus": "අන්ත: ගර්භාශිත උපකරණ ",
